--- a/MentalHealth2.html
+++ b/MentalHealth2.html
@@ -35,41 +35,32 @@
   ======================================================= -->
   <script type="text/javascript">
 
+    <script type="text/javascript" src="js/jquery.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js%22%3E"></script> 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js%22%3E"></script>
+
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js%22%3E"></script>
+
     $(document).ready(function() {
     var url = "https://nvfsserver.azurewebsites.net/sqlTest.php"; 
     $.getJSON(url, function(result) {
         console.log(result);
         $.each(result, function(i, field) {
             if(i != 0){return true;}
-            document.getElementById('d1').innerHTML = field.Desc1; 
-            document.getElementById("d2").innerHTML = field.Desc2; 
-            document.getElementById("d3").innerHTML = field.Desc3; 
 
-            document.getElementById("Name1").innerHTML = field.Name1; 
+            //document.getElementById('d1').innerHTML = field.Desc1; 
+            //document.getElementById("d2").innerHTML = field.Desc2; 
+            //document.getElementById("d3").innerHTML = field.Desc3; 
+
+            //document.getElementById("Name1").innerHTML = field.Name1; 
             document.getElementById("Email1").innerHTML = field.Email1; var strLink = "mailto:" + field.Email1; 
             document.getElementById("Email1").setAttribute("href",strLink); 
             document.getElementById("Phone1").innerHTML = field.Phone1; var strLink = "tel:" + field.Phone1;
             document.getElementById("Phone1").setAttribute("href",strLink); 
-            document.getElementById("AddL1").innerHTML = field.AddL1; 
-            document.getElementById("AddL2").innerHTML = field.AddL2; 
-
-            document.getElementById("Name2").innerHTML = field.Name2; 
-            document.getElementById("Phone2").innerHTML = field.Phone2; var strLink = "tel:" + field.Phone2;
-            document.getElementById("Phone2").setAttribute("href",strLink); 
-            document.getElementById("Email2").innerHTML = field.Email2; var strLink2 = "mailto:" + field.Email2; 
-            document.getElementById("Email2").setAttribute("href",strLink2); 
-            document.getElementById("Add2L1").innerHTML = field.Add2L1; 
-            document.getElementById("Add2L2").innerHTML = field.Add2L2; 
-            document.getElementById("Add2L3").innerHTML = field.Add2L3; });
-
-            document.getElementById("Name3").innerHTML = field.Name3; 
-            document.getElementById("Phone3").innerHTML = field.Phone3; var strLink = "tel:" + field.Phone3;
-            document.getElementById("Phone3").setAttribute("href",strLink); 
-            document.getElementById("Email3").innerHTML = field.Email3; var strLink3 = "mailto:" + field.Email3; 
-            document.getElementById("Email3").setAttribute("href",strLink3); 
-            document.getElementById("Add3L1").innerHTML = field.Add3L1; 
-            document.getElementById("Add3L2").innerHTML = field.Add3L2; 
-            document.getElementById("Add3L3").innerHTML = field.Add3L3; });
+            //document.getElementById("AddL1").innerHTML = field.AddL1; 
+            //document.getElementById("AddL2").innerHTML = field.AddL2; 
         });
     });
     </script>
@@ -78,44 +69,44 @@
 
 <body>
 
-  <!--==========================
-    Header
-  ============================-->
- <header id="header">
-      <div class="container-fluid">
-
-      <div id="logo" class="pull-left">
-        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
+    <!--==========================
+      Header
+    ============================-->
+    <header id="header">
+        <div class="container-fluid">
+  
+        <div id="logo" class="pull-left">
+          <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
+        </div>
+  
+        <nav id="nav-menu-container">
+          <ul class="nav-menu">
+            <li class="menu-active"><a href="index.html">Home</a></li>
+        <li class="menu-active"><a href="Resources.html">Resources</a></li>
+            <li class="menu-has-children"><a href="Services.html">Services</a>
+              <ul>
+                <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
+                <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
+                <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
+                <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
+                <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
+                <li><a href="MentalHealth.html">Mental Health</a></li>
+                <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
+                <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
+              </ul>
+            </li>
+            <li class="menu-has-children"><a href="#"> Donate</a>
+              <ul>
+                <li><a href="Donation.html">Monetary</a></li>
+                <li><a href="DonationI.html">In-Kind</a></li>
+              </ul>
+            </li>
+            <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+            <li class="menu-active"><a href="About.html">About</a></li>
+            <li class="menu-active"><a href="Contact.html">Contact</a></li>
+        </nav><!-- #nav-menu-container -->
       </div>
-
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="menu-active"><a href="index.html">Home</a></li>
-	  <li class="menu-active"><a href="Resources.html">Resources</a></li>
-          <li class="menu-has-children"><a href="Services.html">Services</a>
-            <ul>
-              <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
-              <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
-              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
-              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
-              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
-              <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
-            </ul>
-          </li>
-          <li class="menu-has-children"><a href="#"> Donate</a>
-            <ul>
-              <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI.html">In-Kind</a></li>
-            </ul>
-          </li>
-          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
-          <li class="menu-active"><a href="About.html">About</a></li>
-          <li class="menu-active"><a href="Contact.html">Contact</a></li>
-      </nav><!-- #nav-menu-container -->
-    </div>
-  </header><!-- #header -->
+    </header><!-- #header -->  
 
   <!--==========================
     Intro Section
@@ -133,8 +124,6 @@
     <!--==========================
       Mental Health Section
     ============================-->
-    <br>
-    <br>
     <section id="services">
       <div class="container">
         <header class="section-header wow fadeInUp">
@@ -150,7 +139,7 @@
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
-              <font color="white"><a id="Email1" href="#" ><p><a id="Phone1" href="#"></p></font>
+              <font color="white"><a id="Email1" href="#"></a><a id="Phone1" href="#"></a></p></font>
               <a class="cta-btn" href="https://www.nvfs.org/get-assistance/">Get Assistance</a>
             </div>
           </section>
