--- a/MentalHealth2.html
+++ b/MentalHealth2.html
@@ -142,8 +142,7 @@
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
-              <font color="white"><a id = "Email1" href="#"></a><div id="Phone1"></div></font><br><br>
-                
+              <font color="white"><a id="Email1" href="#" ></a><p><a id="Phone1" href="#"></a></p></font>
               <a class="cta-btn" href="https://www.nvfs.org/get-assistance/">Get Assistance</a>
             </div>
           </section>
