--- a/EarlyHeadStart2.html
+++ b/EarlyHeadStart2.html
@@ -195,13 +195,13 @@
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
-                <strong><font color="white"><a id="Name1"></a></strong><br><a id="Phone1" href="#"></a><br><br></font>
-                <strong><font color="white"><a id="Name2"></a></strong><br><a id="Phone2" href="#"></a><br><br></font>
-                <strong><font color="white"><a id="Name3"></a></strong><br><a id="Phone3" href="#"></a><br><br></font>
-                <strong><font color="white"><a id="Name4"></a></strong><br><a id="Phone4" href="#"></a><br><br></font>
-                <h5>HOME-BASED PROGRAMS</h5>
-                <strong><font color="white"><a id="Name5"></a></strong><br><a id="Phone5" href="#"></a><br><br></font>
-                <strong><font color="white"><a id="Name6"></a></strong><br><a id="Phone6" href="#"></a><br><br></font>
+                <strong><font color="white"><a id="Name1"></a></strong><br><a id="Phone1" href="#" style="color: white"></a><br><br></font>
+                <strong><font color="white"><a id="Name2"></a></strong><br><a id="Phone2" href="#" style="color: white"></a><br><br></font>
+                <strong><font color="white"><a id="Name3"></a></strong><br><a id="Phone3" href="#" style="color: white"></a><br><br></font>
+                <strong><font color="white"><a id="Name4"></a></strong><br><a id="Phone4" href="#" style="color: white"></a><br><br></font>
+                <strong><font color="white"><h5>HOME-BASED PROGRAMS</h5></strong></font>
+                <strong><font color="white"><a id="Name5"></a></strong><br><a id="Phone5" href="#" style="color: white"></a><br><br></font>
+                <strong><font color="white"><a id="Name6"></a></strong><br><a id="Phone6" href="#" style="color: white"></a><br><br></font>
               <br><a class="cta-btn" href="https://www.nvfs.org/our-services/early-childhood-development/early-head-start/">Additional Information</a>
             </div>
           </section>
