--- a/workTest.html
+++ b/workTest.html
@@ -210,7 +210,7 @@
    <script type="text/javascript">
 	
         $(document).ready(function() {
-            var url = "https://nvfsserver.azurewebsites.net/sqlTest.php";
+            var url = "https://nvfsserver.azurewebsites.net/read.php";
             $.getJSON(url, function(result) {
                 console.log(result);
                 $.each(result, function(i, field) {
