--- a/workTest.html
+++ b/workTest.html
@@ -110,9 +110,10 @@
         <header class="section-header wow fadeInUp">
           <h3>Workforce Development</h3>
           <h4><center>BUILDING A STRONGER NORTHERN VIRGINIA WORKFORCE</center></h4>
-		<p id="d1"></p>
- <p id="d2"></p>
-		  <p id="d3"></p>
+          <p>NVFS offers a variety of programs that provide individuals with the necessary skills, knowledge and resources to build brighter futures for themselves, for their families and for the Northern Virginia community. A parent with marketable job skills, and sometimes simply the ability to travel to a higher-paying job, has the opportunity to break the cycle of poverty within their family.
+          </br></br> At NVFS, we help people reach their fullest potential and create opportunities for a brighter, more hopeful future by: enhancing workforce skills to obtain higher-paying jobs with benefits and providing transportation options to increase schedule flexibility. <br><br>
+          These tools provide more control over the workforce options available to our neighbors and enhance the economic development capacity of the overall community.
+        </p>
 
 
           <div class="img">
@@ -122,10 +123,10 @@
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Training Futures</center></h3>
-              <strong><font color="white"><div id="Name1"></div></font></strong><br>
+              <strong><font color="white"><div id="nameMain"></div></font></strong><br>
               <font color="white">Program Manager</font><br><br>
-              <font color="white"><a id="Email1" href="#" ></a><br><a id="Phone1" href="#"></a></font>
-              <font color="white"><div id="AddL1"></div><div id="AddL2"></div><br>  <br><div id="AddL3"></div></font><br>
+              <font color="white"><a id="emailMain" href="#" ></a><br><a id="phoneMain" href="#"></a><br></font>
+              <font color="white"><a id="address" href="#"></a></font><br>
 			  
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
@@ -140,10 +141,10 @@
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Vehicles for Change</center></h3>
-              <strong><font color="white"><div id="Name2"></div></font></strong><br>
+              <strong><font color="white"><div id="name2"></div></font></strong><br>
               <font color="white">Housing Counselor II</font><br><br>
-              <font color="white"><a id="Email2" href="#"></a><div id="Phone2"></div></font>
-              <font color="white"><div id="Add2L1"></div><div id="Add2L2"></div><br>  <br><div id="Add2L3"></div></font><br>
+              <font color="white"><a id="email2" href="#"></a><br><a id="phone2" href="#"></a><br></font>
+              <font color="white"><a id="address2" href="#"></a></font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/vehicles-for-change/">Additional Information</a>
             </div>
           </section>
@@ -210,34 +211,32 @@
    <script type="text/javascript">
 	
         $(document).ready(function() {
-            var url = "https://nvfsserver.azurewebsites.net/read.php";
+            var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
             $.getJSON(url, function(result) {
                 console.log(result);
                 $.each(result, function(i, field) {
-				if(i != 0){return true;}
-				
-					document.getElementById('d1').innerHTML = field.Desc1;
-					document.getElementById("d2").innerHTML = field.Desc2;
-					document.getElementById("d3").innerHTML = field.Desc3;
-                    document.getElementById("Name1").innerHTML = field.Name1;
-                    document.getElementById("Email1").innerHTML = field.Email1;
-					var strLink = "mailto:" + field.Email1;
-					document.getElementById("Email1").setAttribute("href",strLink);
-                    document.getElementById("Phone1").innerHTML = field.Phone1;
-					var strLink = "tel:" + field.Phone1;
-					document.getElementById("Phone1").setAttribute("href",strLink);
-                    document.getElementById("AddL1").innerHTML = field.AddL1;
-					document.getElementById("AddL2").innerHTML = field.AddL2;
-                    document.getElementById("Name2").innerHTML = field.Name2;
-                    document.getElementById("Phone2").innerHTML = field.Phone2;
-					var strLink = "tel:" + field.Phone2;
-					document.getElementById("Phone2").setAttribute("href",strLink);
-                    document.getElementById("Email2").innerHTML = field.Email2;
-					var strLink2 = "mailto:" + field.Email2;
-					document.getElementById("Email2").setAttribute("href",strLink2);
-                    document.getElementById("Add2L1").innerHTML = field.Add2L1;
-                    document.getElementById("Add2L2").innerHTML = field.Add2L2;
-                    document.getElementById("Add2L3").innerHTML = field.Add2L3;
+				if(field.id != 11){return true;}
+				          console.log(" Do I reach here");
+                    document.getElementById("nameMain").innerHTML = field.nameMain;
+                    document.getElementById("emailMain").innerHTML = field.emailMain;
+					var strLink = "mailto:" + field.emailMain;
+					document.getElementById("emailMain").setAttribute("href",strLink);
+                    document.getElementById("phoneMain").innerHTML = field.phoneMain;	
+					var strLink = "tel:" + field.phoneMain;
+					document.getElementById("phoneMain").setAttribute("href",strLink);
+                    document.getElementById("address").innerHTML = field.address;
+					var strLink = "https://maps.google.com/?q=1200" + field.address;
+					document.getElementById("address").setAttribute("href",strLink);
+                    document.getElementById("name2").innerHTML = field.name2;		
+                    document.getElementById("phone2").innerHTML = field.phone2;
+					var strLink = "tel:" + field.phone2;
+					document.getElementById("phone2").setAttribute("href",strLink);
+                    document.getElementById("email2").innerHTML = field.email2;
+					var strLink2 = "mailto:" + field.email2;
+					document.getElementById("email2").setAttribute("href",strLink2);
+                    document.getElementById("address2").innerHTML = field.address2;
+					var strLink = "https://maps.google.com/?q=1200" + field.address2;
+					document.getElementById("address2").setAttribute("href",strLink);
                 });
             });
         });
